# ThermostatDisplay

./: .gitignore  .gitmodules  CMakeLists.txt  deploy-ota.bat  sdkconfig  sdkconfig.old
components/espressif__esp_lcd_touch/: README.md  esp_lcd_touch.c
components/espressif__esp_lcd_touch_gt911/: esp_lcd_touch_gt911.c
components/espressif__esp_lcd_touch_gt911/include/: esp_lcd_touch_gt911.h
documentation/: ESP32-S3-Touch-LCD-4.3 - Waveshare Wiki.html
documentation/ESP32-S3-Touch-LCD-4.3 - Waveshare Wiki_files/: aAdkk0o(1).php  aAdkk0o(2).php  aAdkk0o(3).php  aAdkk0o.php
documentation/ESP32-S3-Touch-LCD-4.3_Code/Arduino/DrawColorBar/: DrawColorBar.ino
documentation/ESP32-S3-Touch-LCD-4.3_Code/Arduino/SD_Test/: SD_Test.ino
documentation/ESP32-S3-Touch-LCD-4.3_Code/Arduino/Sensor_AD/: Sensor_AD.ino
documentation/ESP32-S3-Touch-LCD-4.3_Code/Arduino/TWAIreceive/: TWAIreceive.ino
documentation/ESP32-S3-Touch-LCD-4.3_Code/Arduino/TWAItransmit/: TWAItransmit.ino
documentation/ESP32-S3-Touch-LCD-4.3_Code/Arduino/lvgl_Porting/: lvgl_Porting.ino
documentation/ESP32-S3-Touch-LCD-4.3_Code/ESP-IDF/demo1/: sdkconfig
documentation/ESP32-S3-Touch-LCD-4.3_Code/ESP-IDF/esp32-s3-lcd-4.3-a/: sdkconfig  sdkconfig.old
documentation/ESP32-S3-Touch-LCD-4.3_Code/ESP-IDF/esp32-s3-lcd-4.3-b-i2c_tools/: sdkconfig  sdkconfig.old  sdkconfigy
documentation/ESP32-S3-Touch-LCD-4.3_Code/ESP-IDF/twai_network_master/: sdkconfig  sdkconfig.old
documentation/S3-4.3-libraries/: lv_conf.h
documentation/S3-4.3-libraries/ESP32_IO_Expander/: README.html
main/: Application.cpp  Application.h  CH422G.cpp  CH422G.h  CMakeLists.txt  Callback.h  DeviceConfiguration.cpp  DeviceConfiguration.h  ESP_Panel.cpp  ESP_Panel.h  ESP_Panel_Conf.h  I2CConf.h  Kconfig.projbuild  LoadingUI.cpp  LoadingUI.h  LogManager.cpp  LogManager.h  LvglUI.cpp  LvglUI.h  MQTTConnection.cpp  MQTTConnection.h  Messages.cpp  Messages.h  MotionSensor.cpp  MotionSensor.h  Mutex.cpp  Mutex.h  OTAManager.cpp  OTAManager.h  Queue.cpp  Queue.h  ThermostatState.h  ThermostatUI.cpp  ThermostatUI.h  WifiConnection.cpp  WifiConnection.h  dithering.cpp  dithering.h  idf_component.yml  includes.h  (+11 more)
scripts/: clean.sh  generate-secrets.py
tools/: generate-fonts.bat  generate-fonts.json  generate-fonts.ts  package.json  pnpm-lock.yaml  tsconfig.json
(+18 files in other folders)
